 	Sys.setlocale() to change the LC_COLLATE setting is more
 	likely to change the collation provided by ICU.


BUG FIXES

    o	Names of datasets could clash with temporary filenames used
	when running examples, causing errors.

    o	as.complex() sometimes warned about NAs on coercions and
	sometimes not (when the C function asComplex was used, e.g. on
	list elements).  (PR#13942)



		CHANGES IN R VERSION 2.9.2


NEW FEATURES

    o	install.packages(NULL) now lists packages only once even if they
	occur in more than one repository (as the latest compatible
	version of those available will always be downloaded).

    o	approxfun() and approx() now accept a 'rule' of length two, for
	easy specification of different interpolation rules on left and
	right.

	They no longer segfault for invalid zero-length specification
	of 'yleft, 'yright', or 'f'.

    o	seq_along(x) is now equivalent to seq_len(length(x)) even where
	length() has an S3/S4 method; previously it (intentionally)
	always used the default method for length().

    o	PCRE has been updated to version 7.9 (for bug fixes).

    o	agrep() uses 64-bit ints where available on 32-bit platforms
    	and so may do a better job with complex matches.
	(E.g. PR#13789, which failed only on 32-bit systems.)


DEPRECATED & DEFUNCT

    o	R CMD Rd2txt is deprecated.  (It is just a wrapper for
	R CMD Rdconv -t txt.)

    o	tools::Rd_parse() is deprecated and will be removed in 2.10.0
	(which will use only Rd version 2).


BUG FIXES

    o	parse_Rd() still did not handle source reference encodings
	properly.

    o	The C utility function PrintValue no longer attempts to print
	attributes for CHARSXPs as those attributes are used
	internally for the CHARSXP cache.  This fixes a segfault when
	calling it on a CHARSXP from C code.

    o	PDF graphics output was producing two instances of anything
	drawn with the symbol font face. (Report from Baptiste Auguie.)
