@@ -565,7 +565,7 @@ static Rboolean file_open(Rconnection con)
 static void file_close(Rconnection con)
 {
     Rfileconn this = con->private;
-    if(strcmp(con->description, "stdin")) fclose(this->fp);
+    if(con->isopen && strcmp(con->description, "stdin")) fclose(this->fp);
     con->isopen = FALSE;
 #ifdef Win32
     if(this->anon_file) unlink(this->name);
